--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,16 @@
         android:theme="@style/Theme.AI_Fashion"
         tools:targetApi="31">
         <activity
-            android:name=".RegisterPage"
+            android:name=".Wardrobe_Page"
             android:exported="false" />
         <activity
-            android:name=".HomePage"
+            android:name=".Register_Page"
             android:exported="false" />
         <activity
-            android:name=".WelcomePage"
+            android:name=".Home_Page"
+            android:exported="false" />
+        <activity
+            android:name=".Welcome_Page"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
