--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,13 @@
         android:theme="@style/Theme.AI_Fashion"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+        <activity
+            android:name=".Advice_Page"
+            android:exported="false" />
+        <activity
+            android:name=".My_Dressing"
+            android:exported="false" />
         <activity
             android:name=".Body_Page"
             android:exported="false" />
