--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".My_Dressing"
+            android:exported="false" />
+        <activity
             android:name=".Body_Page"
             android:exported="false" />
         <activity
